Fixed title overflow and align to the vertical center via padding.

--- a/togethernetwork/static/css/style.css
+++ b/togethernetwork/static/css/style.css
@@ -57,6 +57,7 @@
 	color:#FFF;
 	font-size: 30px;
     text-shadow: 0px 0px 5px black;
+    overflow: hidden;
 }
 
 .activity-category-corner-red {
